grammar and text alignment issue fixes

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ html {
 .header h1{
   font-weight: 50;
   font-size: 30px;
-  line-height: 10px;
+  line-height: 30px;
   background-image: none;
   color: white;
   text-align: center;
@@ -158,7 +158,7 @@ html {
 .header h2{
   font-weight: 50;
   font-size: 30px;
-  line-height: 10px;
+  line-height: 30px;
   background-image: none;
   color: white;
   text-align: center;
